<resources>
    <string name="app_name">DentalTalk</string>
    <string name="nombre_desarrollador">Clinical Data Network</string>


    <string name="Btn_ir_logeo">Ingresar con Email</string>
    <string name="Btn_login_google">Ingresar con Google</string>


    <string name="R_Et_nombre_usuario">Nombre de Usuario</string>
    <string name="R_Et_email">Correo electrónico</string>
    <string name="R_Et_password">Contraseña</string>
    <string name="R_Et_r_password">Repita su Contraseña</string>
    <string name="Btn_registrar">Registrar</string>

    <string name="menu_principal">Menú Principal</string>
    <string name="menu_salir">Cerrar sesión</string>
    <string name="menu_peril">Perfil de Usuario</string>
    <string name="menu_acerca_de">Acerca de</string>

    <string name="menu_visitar_perfil">Visitar Perfil</string>
    <string name="menu_visitar">Visitar perfil</string>


    <string name="L_Et_email">Correo electrónico</string>
    <string name="L_Et_password">Contraseña</string>
    <string name="Btn_login"> Ingresar</string>
    <string name="TXT_no_cuenta"> ¿No tienes una cuenta?</string>
    <string name="TXT_ir_registro"> Registrarme</string>

    <string name="Nombre_Usuario">Nombre de Usuario</string>

    <string name="Item_nombre_Usuario">Nombre de usuario</string>
    <string name="Item_email_usuario">Email de usuario</string>
    <string name="TXT_ultimo_mensaje"></string>


    <string name="Et_buscar_usuario">Buscar usuarios</string>

    <!--Perfil de usuario -->

    <string name="P_n_Usuario">Nombre de Usuario</string>
    <string name="P_proveedor_txt">Proveedor: </string>
    <string name="P_proveedor">--</string>
    <string name="P_email">Email</string>
    <string name="P_nombres">Nombres</string>
    <string name="P_apellidos">Apellidos</string>
    <string name="P_profesion">Profesión</string>
    <string name="P_domicilio">Domicilio</string>
    <string name="P_edad">Edad</string>
    <string name="P_telefono">Teléfono</string>
    <string name="Btn_Guardar">Guardar</string>


    <!--Editar Imagen de Perfil-->
    <string name="BtnElegirImagenDe">Elegir imagen de</string>
    <string name="BtnActualizarImagen">Actualizar imagen</string>

    <!--Cuadro de dialogo-->
    <string name="Txt_seleccionar_imagen">Seleccionar imagen de:</string>
    <string name="Btnabrirgaleria">Galería</string>
    <string name="BtnAbrircamara">Camara</string>

    <!--Cuadro de chat-->
    <string name="N_usuario_chat">Nombre de usuario</string>
    <string name="Et_mensaje">Escriba un mensaje</string>

    <!--Item chat-->
    <string name="TXT_ver_mensaje">Hola,¿Cómo Estás?</string>


    <string name="default_web_client_id">233881716341-sd7b0lip7ftk300q8slo2bmuadfd5f9n.apps.googleusercontent.co</string>

    <!--Cd_Establecer Telefono-->
    <string name="Establecer_Telefono">Escriba su número</string>
    <string name="Btn_aceptar_Telefono">Aceptar</string>


    <string name="PV_Perfil_TXT">Perfil de usuario</string>
    <string name="PV_NombreU">Nombre de usuario</string>
    <string name="PV_EmailU">Email de usuario</string>
    <string name="PV_Uid_TXT">Identificador</string>
    <string name="PV_Uid">Uid</string>

    <string name="PV_nombres_TXT">Nombres:</string>
    <string name="PV_nombres">--</string>
    <string name="PV_apellidos_TXT">Apellidos:</string>
    <string name="PV_apellidos">--</string>
    <string name="PV_porfesion_TXT">Profesión:</string>
    <string name="PV_profesion">--</string>
    <string name="PV_telefono_TXT">Telefono:</string>
    <string name="PV_telefono">--</string>
    <string name="PV_edad_TXT">Edad:</string>
    <string name="PV_edad">--</string>
    <string name="PV_domicilio_TXT">Domicilio:</string>
    <string name="PV_domicilio">--</string>
    <string name="PV_proveedor_TXT">Proveedor:</string>
    <string name="PV_proveedor">--</string>


    <string name="Btn_llamar">Llamar</string>
    <string name="Btn_enviar_SMS">Enviar SMS</string>

    <!--Cd_Visualizar_imagen-->
    <string name="Btn_cerrar_v">Cerrar</string>

    <!--Cd_Visualizar_imagen-->

    <string name="Desarrollador">Desarrollado por: Alejandro Quesada Molina</string>
    <string name="CorreoSoporte">Soporte: dataclinicalnetwork@gmail.com</string>
    <string name="Version">Versión: 1.0 </string>
    <string name="EntendidoInfo">Entendido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>