<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        android:layout_gravity="center"
        app:lottie_fileName="dev.json"
        android:layout_marginTop="10dp"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"/>

    <TextView
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Desarrollador"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/CorreoSoporte"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:text="@string/Version"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/EntendidoInfo"
        android:text="@string/EntendidoInfo"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primaryblue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>