<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <EditText
            android:id="@+id/R_Et_nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/R_Et_nombre_usuario"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/R_Et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/R_Et_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/R_Et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/R_Et_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/R_Et_r_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/R_Et_r_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/Btn_registrar"
            android:text="@string/Btn_registrar"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintButtonSize"
            android:backgroundTint="@color/primaryblue"/>

    </LinearLayout>

</RelativeLayout>