<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints=""
        android:importantForAutofill="no"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <!--email-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/L_Et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/L_Et_email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--passwrod-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/L_Et_password"
                android:hint="@string/L_Et_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="Autofill,VisualLintTextFieldSize"
                android:textColorHint="#546E7A"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_login"
            android:text="@string/Btn_login"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryblue"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:text="@string/TXT_no_cuenta"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TXT_ir_registro"
            android:text="@string/TXT_ir_registro"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </LinearLayout>

</RelativeLayout>