<?xml version="1.0" encoding="utf-8"?>
<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/Txt_seleccionar_imagen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:padding="5dp"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:weightSum="@integer/material_motion_duration_long_2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!---Gaelria-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:src="@drawable/galeria"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/Btnabrirgaleria"
                android:backgroundTint="@color/lightblue"
                android:text="@string/Btnabrirgaleria"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!---Camara-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:src="@drawable/camara"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/BtnAbrircamara"
                android:backgroundTint="@color/lightblue"
                android:text="@string/BtnAbrircamara"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>